pom cleanup and other constructor fixes to support both jdk 8 and jdk 11.